--- a/resume.html
+++ b/resume.html
@@ -19,19 +19,33 @@ permalink: /resume/
 </p>
 
 <p>
-    <b>Skills/Technologies:</b> JavaScript (Vanilla, React, NodeJS, JQuery), HTML, CSS, Python, Java, C++, PHP, MongoDB, GraphQL
+    <b>Skills/Technologies:</b> JavaScript (Vanilla, React, NodeJS, JQuery), HTML, CSS, PostgreSQL, Python, PHP, MongoDB, GraphQLJava, C++
 </p>
 
 <h2>Experience</h2>
+<h3>
+  OPUS: Tech-Powered Tuition
+</h3>
+<b>Software Developer (From Fall 2024)</b>
+<ul>
+  <li>Built progress-tracking and user management system</li>
+  <li>UIUX design for web app and marketing website</li>
+  <li>Database design and migrations</li>
+  <li>Handled deployment, CICD with Github Actions</li>
+  <li>NodeJS/Typescript, NextJS/React, PostgreSQL, REST API</li>
+
+</ul>
+
 <h3>
   Chapter & Club: Niche Social Network (Creative Writing)
 </h3>
 <b>Founder (From Dec 2022)</b>
 <ul>
-  <li>Designed and built full-stack social networking app with built-in matching, feedback, and group chat features</li>
+  <li>Designed and built full-stack social networking app with matching, feedback, and group chat features</li>
   <li>Built and engaged feedback from community of hundreds of writers to validate product/market</li>
+  <li>Built KPI tracking dashboard</li>
   <li>Recipient of 10k Venture Initiation Program Grant (NUS)</li>
-  <li>NodeJS, NextJS/React, GraphQL</li>
+  <li>NodeJS/Typescript, NextJS, GraphQL, RabbitMQ, AWS S3, MongoDB, PostgreSQL, Dash Plotly/Python</li>
 </ul>
 
 <h3>
