--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ permalink: //
       A passionate full-stack developer and designer.<br>
       Crafting intuitive apps using code and creativity.
     </div>
-    <a class="btn" href="{{ site.url }}/contact">I Can Help</a>
+    <a class="btn" href="{{ site.url }}/resume">See My Resume!</a>
   </div>
 </div>
 {% include features1.html %}
