Update contact page

--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,13 @@ permalink: /contact/
   <p>
     Nice to meet you! Please let me know if you have any questions, concerns, or just want to talk!
   </p>
+  <p>
+    <strong>Email:</strong> gernenetan@gmail.com
+  </p>
 
 </div>
 
-<form target="contact-iframe" action="https://docs.google.com/forms/d/e/1FAIpQLSelruAlQ5tg5gsa36Bjt-hmb5sCoS-zVfVhtReyRiVV7jdtkg/formResponse">
+<!-- <form target="contact-iframe" action="https://docs.google.com/forms/d/e/1FAIpQLSelruAlQ5tg5gsa36Bjt-hmb5sCoS-zVfVhtReyRiVV7jdtkg/formResponse">
   <div id="contact-error">Please fill in all the fields.</div>
   <div id="contact-success">Your message has been sent!</div>
 
@@ -26,6 +29,6 @@ permalink: /contact/
   <input id="contact-submit" class="btn" type="submit" value="Send">
 </form>
 
-<iframe name="contact-iframe" style="display: none;"></iframe>
+<iframe name="contact-iframe" style="display: none;"></iframe> -->
 
 </div>
