--- a/index.html
+++ b/index.html
@@ -7,23 +7,14 @@ permalink: //
   <div id="index-bubble1"></div>
   <div id="index-bubble2"></div>
   <div id="index-bubble3"></div>
-  <div id="intro-left">
-    <div id="intro-greet">
-      <img id="intro-logo" src="{{ site.url }}/img/TangerineLogo.png" alt="Gernene's Tangerine Logo">
-      <div id="intro-hello">
-        <div id="intro-hi">Hello!</div>
-        <div id="intro-am">I am</div>
-        <h1>Gernene</h1>
+    <img id="intro-logo" src="{{ site.url }}/img/TangerineLogo.png" alt="Gernene's Tangerine Logo">
+    <div id="intro-right">
+      <h1>Hello! I am <span>Gernene.</span></h1>
+      <div>
+        A software developer using technology and design to solve problems.
       </div>
+      <a class="btn" href="{{ site.url }}/resume">See My Resume</a>
     </div>
-  </div>
-  <div id="intro-right">
-    <div>
-      A passionate full-stack developer and designer.<br>
-      Crafting intuitive apps using code and creativity.
-    </div>
-    <a class="btn" href="{{ site.url }}/resume">See My Resume!</a>
-  </div>
 </div>
 {% include features1.html %}
 
