Update index content

--- a/index.html
+++ b/index.html
@@ -70,27 +70,17 @@ permalink: //
     <div class="animation-element"></div>
   </div>
   <p>
-    An interdisciplinary software engineer and designer with a specialty in UI/UX. I use my versatile skill set to approach problems with:
+    I see myself as a problem solver first, engineer/designer second. I dabble in many things: UIUX, databases, writing, and more. I view these skills as tools which all fit together to create solutions. Right job, right tools, right time.
   </p>
+  <p>A few things about me&mdash;which will hopefully catch your eye ;)</p>
   <ul>
-    <li>
-      A broad understanding of context and constraints
-    </li>
-    <li>
-      Role flexibility
-    </li>
-    <li>
-      Aptitude for rapid learning
-    </li>
-    <li>
-      Experience reconciling conflicting design/technical/logistical concerns
-    </li>
-    <li>
-      The know-how to produce solutions
-    </li>
+    <li>Quick and curious learner</li>
+    <li>Adaptable, many-hat wearer</li>
+    <li>Loves reconciling conflicting design/technical/business constraints</li>
+    <li>Appreciates a great team</li>
   </ul>
   <p>
-    My goal is to marry computer science and the arts to improve the way people experience a digital world. Like my work or want to chat? Let me know!
+    Want to chat? Just let me know!
   </p>
   <div id="index-links">
     <a href="{{ site.url }}/projects">All Projects<div></div></a>
